--- a/html/login.html
+++ b/html/login.html
@@ -163,7 +163,7 @@
 
 								}else{
 									$.hori.hideLoading();
-									alert("登录失败,用户名或密码错.");
+									alert(json.msg);
 								}
 
 						},
