增加说去代办条数的hideloading

--- a/html/home.html
+++ b/html/home.html
@@ -59,6 +59,7 @@ function inittodos(){
 					}else{
 						$("#spanTodo").html(json.number);
 						icount= gcount;
+						$.hori.hideLoading();
 					}
 					
 	
