--- a/html/searchPerson.html
+++ b/html/searchPerson.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-	<title>加签</title>
+	<title>选择人员</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0"/>
 	<link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" /> 
@@ -18,7 +18,7 @@
 	<script src="../lib/encrypt/encrypt.js"></script>
 	<script src="../lib/hori/hori.js?tag=21369"></script>
 	<script src="../config/web/config.js"></script>
-	<script src="../lib/app/jqform/app.js"></script>
+	<script src="../lib/app/selectPserson/app.js"></script>
 	<script src="../lib/knockout/knockout.js"></script>	
 	<script src="../lib/knockout/knockout.mapping.js"></script>	
 	<script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
@@ -46,7 +46,7 @@
 											</td><td>
 											<input type="text" id="username" name="username" data-inline="true"></input>
 											</td><td>
-											<a data-role="button" data-inline="true" href="#" onclick="jqsearch()">查询</a>
+											<a data-role="button" data-inline="true" href="#" onclick="search()">查询</a>
 											</td></tr>
 										</table>
 									</div>					
