增加下一环节处理人为空，切换到选人页面之后再提及

--- a/html/searchPerson.html
+++ b/html/searchPerson.html
@@ -46,7 +46,8 @@
 											</td><td>
 											<input type="text" id="username" name="username" data-inline="true"></input>
 											</td><td>
-											<a data-role="button" data-inline="true" href="#" onclick="search()">查询</a>
+											<a data-role="button" data-inline="true" href="#"
+												onclick="selectOaPerson()">查询</a>
 											</td></tr>
 										</table>
 									</div>					
