--- a/html/home.html
+++ b/html/home.html
@@ -1,14 +1,10 @@
-<html>
-<head>
+<html class="ui-mobile"><head>
 <title>首页</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-<meta name="viewport"
-	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0">
 
-<link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" />
-
-<link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" />
+<link rel="stylesheet" href="../assets/home/jquery-mobile-home.css">
 
 
 <script src="../lib/jquery/jquery.min.js"></script>
@@ -16,8 +12,6 @@
 <script src="../lib/encrypt/encrypt.js"></script>
 <script src="../lib/json/json2.js"></script>
 <script src="../lib/hori/hori.js?tag=21369"></script>
-
-<script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
 
 <script src="../config/web/config.js"></script>
 <script type="text/javascript">
@@ -198,10 +192,9 @@ a {
 }
 </style>
 </head>
-<body>
+<body class="ui-mobile-viewport ui-overlay-c">
 
-	<div data-role="page" id="home"
-		style="background: url(../assets/home/bg_empty.jpg); -moz-background-size: cover; background-repeat: repeat;">
+	<div data-role="page" id="home" style="background-image: url(../assets/home/bg_empty.jpg); min-height: 355px; background-position: initial initial; background-repeat: repeat repeat;" data-url="home" tabindex="0" class="ui-page ui-body-c ui-page-active">
 		<!--
 			<div data-role="header">
 				<a data-icon="home" data-role="button" data-rel="back">返回</a>
@@ -209,56 +202,48 @@ a {
 				<a data-icon="home" data-role="button" href="javascript:void(0)" onclick="pushtest();" >推送</a>
 			</div>
 			-->
-		<div data-role="content" align="center">
+		<div data-role="content" align="center" class="ui-content" role="main">
 
 			<!--  -->
 			<div class="ui-grid-b" id="divOne">
 				<div class="ui-block-a">
-					<a href="javascript:void(0);" onclick="loadTaskList()"> <img
-						id="imgToDo" width="68" height="68" src="../assets/home/task.png" />
-					</a> <span id="spanTodo"
-						class="bubble-count ui-btn-up-c ui-btn-corner-all">0</span> <br />
-					<span style="color: #434343"><strong>代办事宜</strong></span>
+					<a href="javascript:void(0);" onclick="loadTaskList()" class="ui-link"> <img id="imgToDo" width="68" height="68" src="../assets/home/task.png">
+					</a> <span id="spanTodo" class="bubble-count ui-btn-up-c ui-btn-corner-all" style="position: fixed; top: 15px; left: 359.5px;">5</span> <br>
+					<span style="color: #434343"><strong>待办事宜</strong></span>
 				</div>
 				<div class="ui-block-b">
-					<a href="javascript:void(0);"
-						onclick="loadUnreadMsgList()">
-						<img width="68" height="68" src="../assets/home/msg.png" />
-					</a> <br /> <span style="color: #434343"><strong>未读消息</strong></span>
+					<a href="javascript:void(0);" onclick="loadUnreadMsgList()" class="ui-link">
+						<img width="68" height="68" src="../assets/home/msg.png">
+					</a> <br> <span style="color: #434343"><strong>未读消息</strong></span>
 				</div>
 				<div class="ui-block-c">
-					<a href="javascript:void(0);"
-						onclick="loadNews()">
+					<a href="javascript:void(0);" onclick="loadNews()" class="ui-link">
 						<img width="68" height="68" src="../assets/home/news.png">
-					</a> <br /> <span style="color: #434343"><strong>企业新闻</strong></span>
+					</a> <br> <span style="color: #434343"><strong>企业新闻</strong></span>
 				</div>
 			</div>
-			<br />
+			<br>
 
 			<div class="ui-grid-b">
 
 
 				<div class="ui-block-a">
-					<a href="javascript:void(0)" onclick="loadContact()"> <img
-						width="68" height="68" src="../assets/home/tel.png">
-					</a> <br /> <span style="color: #434343"><strong>电话查询</strong></span>
+					<a href="javascript:void(0)" onclick="loadContact()" class="ui-link"> <img width="68" height="68" src="../assets/home/tel.png">
+					</a> <br> <span style="color: #434343"><strong>电话查询</strong></span>
 				</div>
 
 
 				<div class="ui-block-b" id="divMail">
-					<a href="javascript:void(0);" onclick="openmail()"> <img
-						width="68" height="68" src="../assets/home/mail.png">
-					</a> <br /> <span style="color: #434343"><strong>个人邮件</strong></span>
+					<a href="javascript:void(0);" onclick="openmail()" class="ui-link"> <img width="68" height="68" src="../assets/home/mail.png">
+					</a> <br> <span style="color: #434343"><strong>个人邮件</strong></span>
 				</div>
 
 			</div>
-			<br />
+			<br>
 
 
 
 		</div>
 	</div>
 
-
-</body>
-</html>
+</body></html>
