修改背景图min-height为100%，解决背景图无法全屏的问题

--- a/html/home.html
+++ b/html/home.html
@@ -194,7 +194,7 @@ a {
 </head>
 <body class="ui-mobile-viewport ui-overlay-c">
 
-	<div data-role="page" id="home" style="background-image: url(../assets/home/bg_empty.jpg); min-height: 355px; background-position: initial initial; background-repeat: repeat repeat;" data-url="home" tabindex="0" class="ui-page ui-body-c ui-page-active">
+	<div data-role="page" id="home" style="background-image: url(../assets/home/bg_empty.jpg); min-height: 100%; background-position: initial initial; background-repeat: repeat repeat;" data-url="home" tabindex="0" class="ui-page ui-body-c ui-page-active">
 		<!--
 			<div data-role="header">
 				<a data-icon="home" data-role="button" data-rel="back">返回</a>
