--- a/html/bi.html
+++ b/html/bi.html
@@ -24,9 +24,7 @@
 			/*注册注销事件*/
 			hori.registerEvent("case", "navButtonTouchUp", function() {
 				hori.backPage(1);
-			});
-			//ios 隐藏邮件图标
-			createUser();
+			});			
 			if (hori.getMobileType() == "apple") {
 				$("#divMail").hide();
 			}
@@ -34,37 +32,13 @@
 			alert(e.message);
 		}
 	});
-	//请示待办
-	function loadTaskList() {
+	// 收入完成
+	function loadSrwcChart() {
+	   alert(1);
 		$.hori.showLoading();
-		localStorage.setItem("itcode",currentUser);
-		var itcode=localStorage.getItem("itcode");
-		$.hori.loadPage($.hori.getconfig().serverBaseUrl+"viewhome/oa/todos/docapp/genertec/persontasks.nsf/dbview?openform&view=vwgwdbshow&restricttocategory="+itcode+"&start=1&count=20");
+		$.hori.loadPage($.hori.getconfig().serverBaseUrl+"viewhome/html/bi/srwc.html");
 	}
-	//请示查阅
-	function loadqueryList() {
-		localStorage.setItem("click","1");
-		$.hori.showLoading();
-		$.hori.loadPage($.hori.getconfig().serverBaseUrl+ 'viewhome/html/queryList.html?data-application=b4f4da8d398248ae998e39c5145d9093');
-	}
-	//BI图表
-	function loadBI() {
-		localStorage.setItem("click","4");
-		$.hori.showLoading();
-		$.hori.loadPage($.hori.getconfig().serverBaseUrl+ 'viewhome/html/bi.html');
-	}
-	function createUser() {
-		$.hori.ajax({
-				"type":"get",
-				"url":"/viewhome/oa/currentuser/docapp/genertec/persontasks.nsf/frmPage?openform",
-				"success":function(res){
-					localStorage.setItem("Chinesename",res);
-					currentUser = "CN="+res+"/O=genertec";
-				},
-				"error":function(res){
-				}
-			});
-	}
+
 </script>
 </head>
 <body>
@@ -76,24 +50,50 @@
 					<img id="imgToDo" width="45" height="45" src="../assets/home/task.png" />
 					</a> <br/>
 					<!-- <span id="spanTodo" class="bubble-count ui-btn-up-c ui-btn-corner-all">1</span> <br /> -->
-					<span style="color:#434343;font-size:14px;"><strong>请示待办</strong></span>
+					<span style="color:#434343;font-size:14px;"><strong>经营态势</strong></span>
+				</div>
+				<div class="ui-block-b">
+					<a href="javascript:void(0);" onclick="loadSrwcChart()">
+						<img id="imgSearch" width="45" height="45" src="../assets/home/msg.png" />
+					</a> <br />
+					<!-- <span id="spanSearch" class="bubble-count ui-btn-up-c ui-btn-corner-all">1</span>  -->
+					<span style="color:#434343;font-size:14px;"><strong>收入完成</strong></span>
+				</div>
+				<div class="ui-block-c">
+					<a href="javascript:void(0);" onclick="loadNews()">
+						<img width="45" height="45" src="../assets/home/news.png">
+					</a> <br /> <span style="color: #434343;font-size:14px;"><strong>利润完成</strong></span>
+				</div>
+				<div class="ui-block-d">
+					<a href="javascript:void(0);" onclick="loadNews()">
+						<img width="45" height="45" src="../assets/home/news.png">
+					</a> <br /> <span style="color: #434343;font-size:14px;"><strong>收入利润</strong></span>
+				</div>
+			</div>
+			<div class="ui-grid-c" id="divTwo">
+				<div class="ui-block-a">
+					<a href="javascript:void(0);" onclick="loadTaskList()"> 
+					<img id="imgToDo" width="45" height="45" src="../assets/home/task.png" />
+					</a> <br/>
+					<!-- <span id="spanTodo" class="bubble-count ui-btn-up-c ui-btn-corner-all">1</span> <br /> -->
+					<span style="color:#434343;font-size:14px;"><strong>收入利润趋势</strong></span>
 				</div>
 				<div class="ui-block-b">
 					<a href="javascript:void(0);" onclick="loadqueryList()">
 						<img id="imgSearch" width="45" height="45" src="../assets/home/msg.png" />
 					</a> <br />
 					<!-- <span id="spanSearch" class="bubble-count ui-btn-up-c ui-btn-corner-all">1</span>  -->
-					<span style="color:#434343;font-size:14px;"><strong>请示查询</strong></span>
+					<span style="color:#434343;font-size:14px;"><strong>收入板块</strong></span>
 				</div>
 				<div class="ui-block-c">
 					<a href="javascript:void(0);" onclick="loadNews()">
 						<img width="45" height="45" src="../assets/home/news.png">
-					</a> <br /> <span style="color: #434343;font-size:14px;"><strong>安全生产值班表</strong></span>
+					</a> <br /> <span style="color: #434343;font-size:14px;"><strong>风险状况</strong></span>
 				</div>
 				<div class="ui-block-d">
-					<a href="javascript:void(0);" onclick="loadBI()">
+					<a href="javascript:void(0);" onclick="loadNews()">
 						<img width="45" height="45" src="../assets/home/news.png">
-					</a> <br /> <span style="color: #434343;font-size:14px;"><strong>BI图表</strong></span>
+					</a> <br /> <span style="color: #434343;font-size:14px;"><strong>利润板块</strong></span>
 				</div>
 			</div>
 			<br />
