--- a/html/bi/srwc.html
+++ b/html/bi/srwc.html
@@ -28,13 +28,13 @@ a {
 	
 	//加载收入完成图表数据
 	function loadSrwcChart(){
-            var url = $.hori.getconfig().appServerHost+"view/bi/loadSrwcChart/accsyWcmNews/services/reqBiReportData";
-            var temp = "$lt;?xml version='1.0' encoding='utf-8'?$gt;$lt;root$gt;$lt;newslist$gt;$lt;type$gt;GT_HomePage_SiteArea_jttz$lt;/type$gt;$lt;userid$gt;fangyonghong$lt;/userid$gt;$lt;pageSize$gt;10$lt;/pageSize$gt;$lt;parent$gt;1$lt;/parent$gt;$lt;pageNow$gt;1$lt;/pageNow$gt;$lt;/newslist$gt;$lt;/root$gt;";
+            var url = $.hori.getconfig().appServerHost+"view/bi/loadSrwcChart/accsyBiReport/services/reqBiReportData";
+            var temp = "$lt;?xml version='1.0' encoding='utf-8'?$gt;$lt;root$gt;$lt;reportdata$gt;$lt;reportid$gt;11$lt;/reportid$gt;$lt;/reportdata$gt;$lt;/root$gt;";
             var soap ="<soapenv:Envelope xmlns:soapenv='http://schemas.xmlsoap.org/soap/envelope/' xmlns:web='http://webservice.biz.digiwin.com'>";
                 soap+='<soapenv:Header/><soapenv:Body>';
-                soap+='<web:getWcmNewsList>';
+                soap+='<web:viewReportById>';
                 soap+='<web:in0>'+temp+'</web:in0>';
-                soap+='</web:getWcmNewsList>';
+                soap+='</web:viewReportById>';
                 soap+=' </soapenv:Body></soapenv:Envelope>';
             var data = "data-xml="+soap;
             
