--- a/html/login.html
+++ b/html/login.html
@@ -26,20 +26,9 @@
 				$("#username").attr("value", username);
 				$('#saveusername').attr("checked", true).checkboxradio("refresh");
 			}else{
-				$("#username").attr("value", "用户名/itcode");
+				$("#username").val("用户名/itcode");
 				$("#username").css("color", "#9e9e9e");
 				$('#saveusername').removeAttr("checked").checkboxradio("refresh");
-			}
-			if(localStorage.getItem("data-savepassword")=="true"){
-				var password=localStorage.getItem("password");
-				if(password!=null){
-					password=decrypt($.hori.getconfig().encryptKey,password);
-				}
-				$("#password").attr("value", password);
-				$('#savepassword').attr("checked", true).checkboxradio("refresh");
-			}else{
-				$("#password").attr("value", "");
-				$('#savepassword').removeAttr("checked").checkboxradio("refresh");
 			}
 			var hori=$.hori;
 			try{
@@ -101,7 +90,7 @@
 						localStorage.setItem("oaServerName",$.hori.getconfig().oaServerName)
 						localStorage.setItem("itcode",username);
 						$.cookie("itcode",username,{"expires":360000,path:"/"})
-						saveUserInfoToLocal(username,password);
+						saveUserInfoToLocal(username);
 						
 						var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/home.html";	
 						var componentURL="";
@@ -148,21 +137,13 @@
 			$("#username").val("");
 			$("#password").val("");
 		}
-		function saveUserInfoToLocal(username,password){
+		function saveUserInfoToLocal(username){
 			try{
 				if(document.getElementById("saveusername").checked){
 					localStorage.setItem("data-saveusername", "true");
 					localStorage.setItem("username", encrypt($.hori.getconfig().encryptKey,username));
 				}else{
 					localStorage.setItem("data-saveusername", "false");
-					
-				}
-				if(document.getElementById("savepassword").checked){
-					localStorage.setItem("data-savepassword", "true");
-					localStorage.setItem("password", encrypt($.hori.getconfig().encryptKey,password));
-				}else{
-					localStorage.setItem("data-savepassword", "false");
-					localStorage.removeItem("password");
 				}
 			}catch(e){}
 		}
@@ -231,12 +212,15 @@
 					</table>
 				</li>
 				<li data-role="fieldcontain">
-					<fieldset id="rememberme"  data-role="controlgroup" data-type="horizontal" data-mini="true" style="width:100%;" align="center">
-						<input type="checkbox" name="saveusername" id="saveusername" class="custom" data-mini="true"/>
-						<label for="saveusername" data-mini="true">记住帐号</label>
-						<input type="checkbox" name="savepassword" id="savepassword" class="custom" data-mini="true"/>
-						<label for="savepassword" data-mini="true">记住密码</label>
-					</fieldset>
+					<div class="ui-grid-a">
+						<div class="ui-block-a">
+							<input type="checkbox" data-theme="f" name="saveusername" id="saveusername" class="custom" data-mini="true"/>
+							<label for="saveusername" data-mini="true">记住帐号</label>
+						</div>
+						<div class="ui-block-b">
+							<a data-role="button" data-theme="f" data-mini="true" onclick="">忘记密码</a>
+						</div>
+					</div>
 				</li>
 		</ul>
 			<div class="ui-grid-a">
