--- a/html/bi.html
+++ b/html/bi.html
@@ -2,16 +2,98 @@
 <head>
 <title>首页</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0" />
+<meta name="viewport"
+	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0" />
 <link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" />
 <link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" />
-<script src="../lib/jquery/jquery.min.js"></script>
 <script src="../lib/jquery-cookie/jquery.cookie.js"></script>
 <script src="../lib/encrypt/encrypt.js"></script>
 <script src="../lib/json/json2.js"></script>
 <script src="../lib/hori/hori.js?tag=21369"></script>
 <script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
+<script src="../lib/app/home/app.js"></script>
 <script src="../config/web/config.js"></script>
+<!--demo展示所用css，不用关心 begin-->
+<link rel="stylesheet" type="text/css" href="src/navigator/reset.css" />
+<!--demo展示所用css end-->
+<!--组件依赖css begin-->
+<link rel="stylesheet" type="text/css"
+	href="src/navigator/navigator.css" />
+<link rel="stylesheet" type="text/css"
+	href="src/navigator/navigator.default.css" />
+<!--皮肤文件，若不使用该皮肤，可以不加载-->
+<!--组件依赖css end-->
+
+<!--组件依赖js begin-->
+<script type="text/javascript" src="src/extend/zepto.js"></script>
+<script type="text/javascript" src="src/extend/touch.js"></script>
+<script type="text/javascript" src="src/extend/iscroll.js"></script>
+<script type="text/javascript" src="src/extend/highlight.js"></script>
+<script type="text/javascript" src="src/extend/parseTpl.js"></script>
+<script type="text/javascript" src="src/core/gmu.js"></script>
+<script type="text/javascript" src="src/core/event.js"></script>
+<script type="text/javascript" src="src/core/widget.js"></script>
+<script type="text/javascript" src="src/widget/navigator/navigator.js"></script>
+<script type="text/javascript" src="src/widget/navigator/$scrollable.js"></script>
+<script type="text/javascript"
+	src="src/widget/navigator/scrolltonext.js"></script>
+<style type="text/css">
+#nav2 {
+	background: transparent;
+	border-width: 0;
+	display: -webkit-box;
+	-webkit-box-flex: 1;
+}
+
+#nav2 li a {
+	color: #333;
+}
+
+#nav2 li.ui-state-active, #nav2 li.ui-state-hover {
+	background: transparent;
+}
+
+#nav2 li.ui-state-active a, #nav2 li.ui-state-hover a {
+	color: #e81459;
+}
+
+#nav2 .ui-scroller {
+	position: relative;
+}
+
+#nav2 .bar {
+	position: absolute;
+	height: 2px;
+	bottom: 0;
+	overflow: hidden;
+	-webkit-box-sizing: border-box;
+	padding: 0 10px;
+	-webkit-transition: left 200ms ease-out;
+}
+
+#nav2 .bar:after {
+	content: '';
+	display: block;
+	height: 2px;
+	background-color: #e81459;
+}
+
+#nav2_wrap {
+	display: -webkit-box;
+}
+
+#arrow {
+	width: 30px;
+	-webkit-box-flex: 0;
+	-webkit-box-align: center;
+	-webkit-box-pack: center;
+	display: -webkit-box;
+}
+
+.ui-scroller {
+	float: left;
+}
+</style>
 <script type="text/javascript">
 	var currentUser = "";
 	$(document).ready(function() {
@@ -24,7 +106,7 @@
 			/*注册注销事件*/
 			hori.registerEvent("case", "navButtonTouchUp", function() {
 				hori.backPage(1);
-			});			
+			});
 			if (hori.getMobileType() == "apple") {
 				$("#divMail").hide();
 			}
@@ -32,79 +114,91 @@
 			alert(e.message);
 		}
 	});
-	// 收入完成
-	function loadSrwcChart() {
-		$.hori.showLoading();
-		$.hori.loadPage($.hori.getconfig().serverBaseUrl+"viewhome/html/bi/srwc.html");
-	}
-	
-	// 经营态势
-	function loadJyts() {
-		$.hori.showLoading();
-		$.hori.loadPage($.hori.getconfig().serverBaseUrl+"viewhome/html/bi/jyts.html");
-	}
-
 </script>
 </head>
 <body>
-	<div data-role="page" id="home" style="background: url(../assets/home/bg_empty.jpg); -moz-background-size: cover; background-repeat: repeat;">
+	<!-- <div data-role="page" id="home"
+		style="background: url(../assets/home/bg_empty.jpg); -moz-background-size: cover; background-repeat: repeat;">
 		<div data-role="content" align="center">
-			<div class="ui-grid-c" id="divOne">
-				<div class="ui-block-a">
-					<a href="javascript:void(0);" onclick="loadJyts()"> 
-					<img id="imgToDo" width="45" height="45" src="../assets/home/task.png" />
-					</a> <br/>
+ -->		<div id="nav2_wrap" style="sidth:100%;">
+       	 <div id="nav2">
+            <ul><li>
+					<a href="bi/jyts.html" target="aa"> <img id="imgToDo"
+						width="45" height="45" src="../assets/home/task.png" />
+					</a> <br />
 					<!-- <span id="spanTodo" class="bubble-count ui-btn-up-c ui-btn-corner-all">1</span> <br /> -->
-					<span style="color:#434343;font-size:14px;"><strong>经营态势</strong></span>
-				</div>
-				<div class="ui-block-b">
-					<a href="javascript:void(0);" onclick="loadSrwcChart()">
-						<img id="imgSearch" width="45" height="45" src="../assets/home/msg.png" />
+					<span style="color: #434343; font-size: 14px;"><strong>经营态势</strong></span>
+				</li>
+				<li>
+					<a href="bi/srwc.html" target=aa> <img id="imgSearch"
+						width="45" height="45" src="../assets/home/msg.png" />
 					</a> <br />
 					<!-- <span id="spanSearch" class="bubble-count ui-btn-up-c ui-btn-corner-all">1</span>  -->
-					<span style="color:#434343;font-size:14px;"><strong>收入完成</strong></span>
-				</div>
-				<div class="ui-block-c">
-					<a href="javascript:void(0);" onclick="loadNews()">
-						<img width="45" height="45" src="../assets/home/news.png">
-					</a> <br /> <span style="color: #434343;font-size:14px;"><strong>利润完成</strong></span>
-				</div>
-				<div class="ui-block-d">
-					<a href="javascript:void(0);" onclick="loadNews()">
-						<img width="45" height="45" src="../assets/home/news.png">
-					</a> <br /> <span style="color: #434343;font-size:14px;"><strong>收入利润</strong></span>
-				</div>
-			</div>
-			<div class="ui-grid-c" id="divTwo">
-				<div class="ui-block-a">
-					<a href="javascript:void(0);" onclick="loadTaskList()"> 
-					<img id="imgToDo" width="45" height="45" src="../assets/home/task.png" />
-					</a> <br/>
-					<!-- <span id="spanTodo" class="bubble-count ui-btn-up-c ui-btn-corner-all">1</span> <br /> -->
-					<span style="color:#434343;font-size:14px;"><strong>收入利润趋势</strong></span>
-				</div>
-				<div class="ui-block-b">
-					<a href="javascript:void(0);" onclick="loadqueryList()">
-						<img id="imgSearch" width="45" height="45" src="../assets/home/msg.png" />
+					<span style="color: #434343; font-size: 14px;"><strong>收入完成</strong></span>
+				</li>
+				<li>					
+				<a href="bi/lrwc.html" target=aa> <img width="45" height="45"
+						src="../assets/home/news.png">
+					</a> <br /> <span style="color: #434343; font-size: 14px;"><strong>利润完成</strong></span>
+				</li>
+				<li>
+					<a href="bi/srlr.html" target=aa> <img width="45" height="45"
+						src="../assets/home/news.png">
+					</a> <br /> <span style="color: #434343; font-size: 14px;"><strong>收入利润</strong></span>
+				</li>
+				<li>
+					<a href="bi/srlrqs.html" target="aa"> <img id="imgToDo"
+						width="45" height="45" src="../assets/home/task.png" />
 					</a> <br />
-					<!-- <span id="spanSearch" class="bubble-count ui-btn-up-c ui-btn-corner-all">1</span>  -->
-					<span style="color:#434343;font-size:14px;"><strong>收入板块</strong></span>
-				</div>
-				<div class="ui-block-c">
-					<a href="javascript:void(0);" onclick="loadNews()">
-						<img width="45" height="45" src="../assets/home/news.png">
-					</a> <br /> <span style="color: #434343;font-size:14px;"><strong>风险状况</strong></span>
-				</div>
-				<div class="ui-block-d">
-					<a href="javascript:void(0);" onclick="loadNews()">
-						<img width="45" height="45" src="../assets/home/news.png">
-					</a> <br /> <span style="color: #434343;font-size:14px;"><strong>利润板块</strong></span>
-				</div>
-			</div>
-			<br />
-			
+					<!-- <span id="spanTodo" class="bubble-count ui-btn-up-c ui-btn-corner-all">1</span> <br /> -->
+					<span style="color: #434343; font-size: 14px;"><strong>收入利润趋势</strong></span>
+				</li>
+				<li>
+					<a href="bi/srbk.html" target=aa> <img id="imgSearch"
+						width="45" height="45" src="../assets/home/msg.png" />
+					</a> <br />
+					<span style="color: #434343; font-size: 14px;"><strong>收入板块</strong></span>
+				</li>
+				<li>
+					<a href="bi/fxzk.html" target=aa> <img width="45" height="45"
+						src="../assets/home/news.png">
+					</a> <br /> <span style="color: #434343; font-size: 14px;"><strong>风险状况</strong></span>
+				</li>
+				<li>
+					<a href="bi/lrbk.html" target=aa> <img width="45" height="45"
+						src="../assets/home/news.png">
+					</a> <br /> <span style="color: #434343; font-size: 14px;"><strong>利润板块</strong></span>
+           </li> 
+           </ul>
+            <span class="bar"></span>
+        </div>
+  <!--   </div> -->
+    
+<script type="text/javascript">
+    $('#nav').navigator();
+
+    (function () {
+        var bar = $('#nav2 span.bar'),
+            left = $('#nav2 ul').offset().left;
+        $('#nav2').navigator({
+            select: function( e, index, li ){
+                bar.css({
+                    left: li.offsetLeft - left,
+                    width: li.childNodes[0].offsetWidth
+                });
+            },
+            ready: function() {
+                bar.appendTo($('#nav2').find('.ui-scroller'));
+            }
+        });
+
+    })();
+</script>
+
 		</div>
-	</div>
-	
+		<iframe width=100% height=800px frameborder=1 scrolling=no name="aa"
+			src="bi/lrbk.html"></iframe>
+		，
+
 </body>
 </html>
