--- a/html/bi/srbk.html
+++ b/html/bi/srbk.html
@@ -83,6 +83,11 @@ a {
 	                trigger: 'item',
 	                formatter: "{a} <br/>{b} : {c} ({d}%)"
 	            },
+	            color: ['#e40218','#fdf001','#b5c606','#32cd32','#76c7c0',
+	                    '#1596ab','#e98434','#409736','#ff6600','#40e0d0',
+	                    '#1e90ff','#ff6347','#7b68ee','#00fa9a','#ffd700',
+	                    '#6699FF','#ff6666','#3cb371','#b8860b','#30e0e0'
+	                    ],
 	            legend: {
 	            	
 	                data:category,
