--- a/html/bi/srwc.html
+++ b/html/bi/srwc.html
@@ -62,15 +62,17 @@ var j="";
                 "data":data,
                 "success":function(res){
                 	var json=JSON.parse(res);
-                	console.log(json);
+                	reportdata=json.reportdata;
+                	var seriesname=reportdata.seriesname.split('|');
+                	var seriesdata=reportdata.seriesdata.split('|');
                 	j=json.ljwcz;
-                	var b=json.qnys+":"+json.qnysz+json.primaryunit;
+                	var b=seriesname[0]+":"+seriesdata[0]+reportdata.primaryunit;
                 	document.getElementById("yusuan").innerHTML=b;
-                	var c=json.ljwc+":"+json.ljwcz+json.primaryunit;
+                	var c=seriesname[1]+":"+seriesdata[1]+reportdata.primaryunit;
                 	document.getElementById("leiji").innerHTML=c;
-                	var d=json.wcbl+":"+json.wcblz+"%";
+                	var d=seriesname[2]+":"+seriesdata[2]+"%";
                 	document.getElementById("bili").innerHTML=d;
-                	var ww=(Math.ceil((json.ljwcz)/100))*100;
+                	var ww=(Math.ceil((seriesdata[1])/100))*100;
                 	draw(ww);
                 },
                 "error":function(res){
@@ -105,8 +107,8 @@ var j="";
 					max:ww,
 					axisLine : { // 坐标轴线
 						lineStyle : { // 属性lineStyle控制线条样式
-							color : [ [ 0.2, 'rgba(139,71,137,0.8)' ], [ 0.8, 'rgba(139,71,137,0.8)' ],
-									[ 1, 'rgba(139,71,137,0.8)' ] ],
+							color : [ [ 0.2, '#01a149' ], [ 0.8, '#01a149' ],
+									[ 1, '#01a149' ] ],
 							width : 50
 						}
 					},
@@ -114,12 +116,12 @@ var j="";
 						splitNumber : 10, // 每份split细分多少段
 						length : 10, // 属性length控制线长
 						lineStyle : { // 属性lineStyle控制线条样式
-							color : '#A4D3EE'
+							color : '#1ad4d1'
 						}
 					},
 					axisLabel : { // 坐标轴文本标签，详见axis.axisLabel
 						textStyle : { // 其余属性默认使用全局文本样式，详见TEXTSTYLE
-							color : '#32CD32'
+							color : '#ffffff'
 						}
 					},
 					splitLine : { // 分隔线
